Fixed about me title, and fixed footer overlap

--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,10 @@ a {
   font-weight: bold;
 }
 
+p {
+  padding-bottom: 100px;
+}
+
 header {
   background-image: linear-gradient(to right, var(--primary-color) , var(--tertiary-color));
   border-bottom: 1.8px solid var(--quaternary-color);
